[gd_scene load_steps=5 format=3 uid="uid://dldqutfbgc2bc"]

[ext_resource type="Script" path="res://gameplay/path_explorer.gd" id="1_472xi"]
[ext_resource type="Script" path="res://gameplay/canvas_hud.gd" id="3_cbwfw"]
[ext_resource type="PackedScene" uid="uid://cko02oljhiby" path="res://paused/paused.tscn" id="3_yooxm"]
[ext_resource type="PackedScene" uid="uid://cee5dna3u27jf" path="res://assets/select_sfx.tscn" id="4_3p0am"]

[node name="Tactic" type="Node2D"]
script = ExtResource("1_472xi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_cbwfw")

[node name="Bar" type="FlowContainer" parent="CanvasLayer"]
offset_left = 1176.0
offset_top = 608.0
offset_right = 1280.0
offset_bottom = 720.0
alignment = 1
vertical = true

[node name="Run" type="Button" parent="CanvasLayer/Bar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "run"

[node name="Stop" type="Button" parent="CanvasLayer/Bar"]
layout_mode = 2
text = "stop"

[node name="Mode" type="Label" parent="CanvasLayer"]
offset_right = 128.0
offset_bottom = 32.0
text = "Tactic mode"
horizontal_alignment = 1

[node name="SpeedCoef" type="Label" parent="CanvasLayer"]
offset_top = 32.0
offset_right = 128.0
offset_bottom = 64.0
horizontal_alignment = 1

[node name="Paused" parent="CanvasLayer" instance=ExtResource("3_yooxm")]
visible = false

[node name="SelectSfx" parent="CanvasLayer" instance=ExtResource("4_3p0am")]

[connection signal="pressed" from="CanvasLayer/Bar/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="CanvasLayer/Bar/Stop" to="." method="_on_stop_pressed"]
